--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drift-in-ml",
+  "name": "lightgbm101",
   "type": "module",
   "private": true,
   "scripts": {
@@ -8,13 +8,13 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.49.0-beta.1",
+    "@slidev/cli": "^0.49.23",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "vue": "^3.4.21"
+    "vue": "^3.4.35"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "prettier-plugin-slidev": "^1.0.5"
   }
 }
